tests/baselines/reference/arrayIterationLibES5TargetDifferent(nolib=false,target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
arrayIterationLibES5TargetDifferent.ts(15,17): error TS2495: Type 'number' is not an array type or a string type.
arrayIterationLibES5TargetDifferent.ts(21,17): error TS2495: Type '{ foo: string; }' is not an array type or a string type.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== arrayIterationLibES5TargetDifferent.ts (2 errors) ====
    declare function log(message?: any): void;
    
    for (const x of [1, 2, 3]) {
        log(x);
    }
    
    declare const aString: string;
    
    for (const x of aString) {
        log(x);
    }
    
    declare const aNumber: number;
    
    for (const x of aNumber) {
                    ~~~~~~~
!!! error TS2495: Type 'number' is not an array type or a string type.
        log(x);
    }
    
    declare const anObject: { foo: string };
    
    for (const x of anObject) {
                    ~~~~~~~~
!!! error TS2495: Type '{ foo: string; }' is not an array type or a string type.
        log(x);
    }